created forums-open-category-themes-topics page

--- a/forums-selected-category.html
+++ b/forums-selected-category.html
@@ -179,61 +179,61 @@
 
             <!-- END FOR REGISTERED USERS -->
             <div class="forum-wrap">
-            <div class="row">
-              <div class="col-md-12">
-                <h2 class="title">Main</h2>
-                <div class="divider"></div>
-                <div class="table-responsive select-category">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th class="topic-width">Main</th>
-                        <th class="category-width">Topics</th> 
-                        <th class="post-width text-right">Last post by</th>  
-                      </tr> 
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="category"><a href="forums-selected-categoty.html">Main Forum</a></td>
-                        <td class="posts-views">350</td>
-                        <td class="text-center text-block-right">
-                          <span class="name">arthur</span><br><span class="date">11.26.15</span>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="category"><a href="forums-selected-categoty.html">Tutorials</a></td>
-                        <td class="posts-views">25</td>
-                        <td class="text-center text-block-right">
-                          <span class="name">arthur</span><br><span class="date">11.26.15</span>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="category"><a href="forums-selected-categoty.html">Challenges</a></td>
-                        <td class="posts-views">1</td>
-                        <td class="text-center text-block-right">
-                          <span class="name">arthur</span><br><span class="date">11.26.15</span>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="category"><a href="forums-selected-categoty.html">Features Request</a></td>
-                        <td class="posts-views">80</td>
-                        <td class="text-center text-block-right">
-                          <span class="name">arthur</span><br><span class="date">11.26.15</span>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="category"><a href="forums-selected-categoty.html">3D Printing</a></td>
-                        <td class="posts-views">16</td>
-                        <td class="text-center text-block-right">
-                          <span class="name">arthur</span><br><span class="date">11.26.15</span>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div><!-- table-responsive -->
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="title">Main</h2>
+                  <div class="divider"></div>
+                  <div class="table-responsive select-category">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th class="topic-width">Main</th>
+                          <th class="category-width">Topics</th> 
+                          <th class="post-width text-right">Last post by</th>  
+                        </tr> 
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td class="category"><a href="forums-open-category-themes-topics.html">Main Forum</a></td>
+                          <td class="posts-views">350</td>
+                          <td class="text-center text-block-right">
+                            <span class="name">arthur</span><br><span class="date">11.26.15</span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="category"><a href="forums-open-category-themes-topics.html">Tutorials</a></td>
+                          <td class="posts-views">25</td>
+                          <td class="text-center text-block-right">
+                            <span class="name">arthur</span><br><span class="date">11.26.15</span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="category"><a href="forums-open-category-themes-topics.html">Challenges</a></td>
+                          <td class="posts-views">1</td>
+                          <td class="text-center text-block-right">
+                            <span class="name">arthur</span><br><span class="date">11.26.15</span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="category"><a href="forums-open-category-themes-topics.html">Features Request</a></td>
+                          <td class="posts-views">80</td>
+                          <td class="text-center text-block-right">
+                            <span class="name">arthur</span><br><span class="date">11.26.15</span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="category"><a href="forums-open-category-themes-topics.html">3D Printing</a></td>
+                          <td class="posts-views">16</td>
+                          <td class="text-center text-block-right">
+                            <span class="name">arthur</span><br><span class="date">11.26.15</span>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div><!-- table-responsive -->
+                </div>
               </div>
-            </div>
-          </div>
+            </div><!-- forum-wrap -->
           </div>
         </div><!-- content-list -->
       </section>
