created forums inner pages

--- a/forums-open-category-themes-topics.html
+++ b/forums-open-category-themes-topics.html
@@ -279,7 +279,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -373,7 +373,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -467,7 +467,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -561,7 +561,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -655,7 +655,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -749,7 +749,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -843,7 +843,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -937,7 +937,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -1031,7 +1031,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
 
                 <div class="media">
@@ -1125,7 +1125,7 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="btn read-more" href="#" role="button">Read more</a>
+                  <a class="btn read-more" href="topic-single.html" role="button">Read more</a>
                 </div><!-- media -->
               </div>
             </div>
