--- a/new-topic-login.html
+++ b/new-topic-login.html
@@ -25,7 +25,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div id="login">
-<nav class="navbar navbar-default">
+      <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -53,14 +53,14 @@
                   <a href="#" class="dropdown-toggle"><span class="logo-icon"></span>My SelfCAD</a>
                 </li>
                 <!-- FOR NOT REGISTERED USERS -->
-                <!-- <li>
-                  <a href="login.html" class="dropdown-toggle"><span class="login-icon"></span>Login</a>
-                </li> -->
+                <li>
+                  <a href="login.html" class="dropdown-toggle active"><span class="login-icon"></span>Login</a>
+                </li>
                 <!-- FOR NOT REGISTERED USERS -->
                 
                 <!-- FOR REGISTERED USERS -->
 
-                <li class="dropdown">
+                <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="user-photo"></span>Natalia
                   </a>
@@ -68,7 +68,7 @@
                     <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
                     <li><a href="#"><span class="logout-icon"></span>LogOut</a></li>
                   </ul>
-                </li>
+                </li> -->
 
                 <!-- END FOR REGISTERED USERS -->
               </ul>
@@ -164,6 +164,13 @@
       <section>
         <div class="content-list">
           <div class="container">
+            <h3>New topic</h3>
+            <ol class="breadcrumb">
+              <li class="first-step"><a href="#">Forum</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Payments</a></li>
+              <li class="active">New topic</li>
+            </ol>
             <div class="center-block login-wrap">
               <h4 class="title">LogIn</h4>
               <p>You need to login in order to add a topic or post a comment</p>
