--- a/registration.html
+++ b/registration.html
@@ -315,23 +315,25 @@
                   <br>
                   <br>
                   <div class="socials">
-                    <p class="text-center">Or Login with</p>
-                    <a class="btn" href="#" role="button">
-                      <img src="images/icon-social-selfcad.jpg">
-                      <span class="selfcad-btn hidden-xs">SelfCAD</span>
-                    </a>
-                    <a class="btn" href="#" role="button">
-                      <img src="images/icon-social-facebook.jpg">
-                      <span class="facebook-btn hidden-xs">Facebook</span>
-                    </a>
-                    <a class="btn" href="#" role="button">
-                      <img src="images/icon-social-twitter.jpg">
-                      <span class="twitter-btn hidden-xs">Twitter</span>
-                    </a>
-                    <a class="btn margin-r-reset" href="#" role="button">
-                      <img src="images/icon-social-linkedin.jpg">
-                      <span class="linkedin-btn hidden-xs">LinkedIn</span>
-                    </a>
+                    <div class="row">
+                      <p class="text-center">Or Login with</p>
+                      <a class="btn col-md-3 col-sm-3" href="#" role="button">
+                        <img src="images/icon-social-selfcad.jpg">
+                        <span class="selfcad-btn hidden-xs">SelfCAD</span>
+                      </a>
+                      <a class="btn col-md-3 col-sm-3" href="#" role="button">
+                        <img src="images/icon-social-facebook.jpg">
+                        <span class="facebook-btn hidden-xs">Facebook</span>
+                      </a>
+                      <a class="btn col-md-3 col-sm-3" href="#" role="button">
+                        <img src="images/icon-social-twitter.jpg">
+                        <span class="twitter-btn hidden-xs">Twitter</span>
+                      </a>
+                      <a class="btn col-md-3 col-sm-3" href="#" role="button">
+                        <img src="images/icon-social-linkedin.jpg">
+                        <span class="linkedin-btn hidden-xs">LinkedIn</span>
+                      </a>
+                    </div>
                   </div>
                 </div><!-- signup-block -->
               </form><!-- #register-form -->
