--- a/all-topics.html
+++ b/all-topics.html
@@ -13,6 +13,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/jquery-switchbutton/jquery.switchButton.css">
     <link rel="stylesheet" href="/bower_components/hover/css/hover.css">
     <link rel="stylesheet" href="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
     <!-- endbower -->
