--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/jquery-switchbutton/jquery.switchButton.css">
     <link rel="stylesheet" href="/bower_components/hover/css/hover-min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
     <!-- endbower -->
     <!-- endbuild -->
 
