--- a/gallery-post.html
+++ b/gallery-post.html
@@ -13,7 +13,9 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/jquery-switchbutton/jquery.switchButton.css">
     <link rel="stylesheet" href="/bower_components/hover/css/hover.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
     <!-- endbower -->
     <!-- endbuild -->
 
