--- a/all-topics.html
+++ b/all-topics.html
@@ -134,7 +134,8 @@
             <div class="row">
               <div class="col-md-4 col-sm-4">
                 <a href="gallery.html" class="text-center">
-                  <div class="content-menu-item-wrap gallery-item">
+                  <div class="content-menu-item-wrap">
+                    <div class="gallery-item"></div>
                     Gallery
                     <br>
                     <span>1562 photo / 15 categories</span>  
@@ -143,7 +144,8 @@
               </div>
               <div class="col-md-4 col-sm-4">
                 <a href="forums.html" class="text-center">
-                  <div class="content-menu-item-wrap forum-item">
+                  <div class="content-menu-item-wrap">
+                    <div class="forum-item"></div>
                     Forums
                     <br>
                     <span>1000 topics / 15 categories</span>
@@ -152,7 +154,8 @@
               </div>
               <div class="col-md-4 col-sm-4">
                 <a href="faq.html" class="text-center">
-                  <div class="content-menu-item-wrap faq-item">
+                  <div class="content-menu-item-wrap">
+                    <div class="faq-item"></div>
                     FAQ
                     <br>
                     <span>200 questions / 5 categories</span>
@@ -638,12 +641,15 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="http://cdn.tinymce.com/4/tinymce.min.js"></script>
 
     <script src="scripts/vendor.js"></script>
     
     <script src="scripts/plugins.js"></script>
+
+    <!--<script src='http://cdn.tinymce.com/4/tinymce.min.js'></script>-->
     
     <script src="scripts/main.js"></script>
   </body>
-</html>
+</html>…
