--- a/new-topic.html
+++ b/new-topic.html
@@ -337,8 +337,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
-    <script src="//cdn.tinymce.com/4/tinymce.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="http://cdn.tinymce.com/4/tinymce.min.js"></script>
 
     <script src="scripts/vendor.js"></script>
     
@@ -346,7 +346,7 @@
     
     <script src="scripts/main.js"></script>
   </body>
-</html> -->.createElement(i);r=o.getElementsByTagName(i)[0];
+</html> -->(i);r=o.getElementsByTagName(i)[0];
       e.src='https://www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
