--- a/new-topic.html
+++ b/new-topic.html
@@ -338,12 +338,14 @@
     </script>
 
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script src="http://cdn.tinymce.com/4/tinymce.min.js"></script>
 
     <script src="scripts/vendor.js"></script>
     
     <script src="scripts/plugins.js"></script>
     
+    <script src="scripts/main.js"></script>
+  </body>
+</html> -->  
     <script src="scripts/main.js"></script>
   </body>
 </html> -->(i);r=o.getElementsByTagName(i)[0];
