--- a/new-topic.html
+++ b/new-topic.html
@@ -8,14 +8,14 @@
     <title>SelfCAD</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,300" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,300" rel="stylesheet" type="text/css">
 
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="styles/vendor.css">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
 
     <link rel="stylesheet" href="styles/main.css">
     
@@ -345,8 +345,7 @@
     
     <script src="scripts/main.js"></script>
   </body>
-</html> -->  
-    <script src="scripts/main.js"></script>
+</html> -->"scripts/main.js"></script>
   </body>
 </html> -->(i);r=o.getElementsByTagName(i)[0];
       e.src='https://www.google-analytics.com/analytics.js';
