--- a/all-topics.html
+++ b/all-topics.html
@@ -12,7 +12,8 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="styles/vendor.css">
-
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="styles/main.css">
     
