--- a/all-topics.html
+++ b/all-topics.html
@@ -641,12 +641,11 @@
     </script>
 
     <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 
     <script src="scripts/vendor.js"></script>
     
     <script src="scripts/plugins.js"></script>
-
-    <!--<script src='http://cdn.tinymce.com/4/tinymce.min.js'></script>-->
     
     <script src="scripts/main.js"></script>
   </body>
