--- a/new-topic.html
+++ b/new-topic.html
@@ -337,6 +337,7 @@
     </script>
 
     <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 
     <script src="scripts/vendor.js"></script>
     
