fixed select, and added map for my profile page

--- a/gallery-post.html
+++ b/gallery-post.html
@@ -59,15 +59,15 @@
                 
                 <!-- FOR REGISTERED USERS -->
 
-                <!-- <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <!-- <li>
+                  <a href="#">
                     <span class="user-photo"></span>Natalia
                   </a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
-                    <li><a href="#"><span class="logout-icon"></span>LogOut</a></li>
-                  </ul>
-                </li> -->
+                </li>
+                <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
+                <li><a href="#"><span class="message-icon"></span>Messages</a></li>
+                <li><a href="#"><span class="edit-icon"></span>Edit Profile</a></li>
+                <li><a href="#"><span class="logout-icon"></span>LogOut</a></li> -->
 
                 <!-- END FOR REGISTERED USERS -->
               </ul>
@@ -91,13 +91,14 @@
                   <a href="login.html"><span class="login-icon"></span>Login</a>
                 </li>
                 <!-- FOR REGISTERED USERS -->
-
                 <!-- <li>
                   <a href="#">
                     <span class="user-photo"></span>Natalia
                   </a>
                 </li>
                 <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
+                <li><a href="#"><span class="message-icon"></span>Messages</a></li>
+                <li><a href="#"><span class="edit-icon"></span>Edit Profile</a></li>
                 <li><a href="#"><span class="logout-icon"></span>LogOut</a></li> -->
 
                 <!-- END FOR REGISTERED USERS -->
@@ -498,7 +499,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPoiPlxE-NMWr9xp9_ouItwqDm27zrdp4&signed_in=true&libraries=places&callback=initMap" async defer="defer">
+    </script>
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 
     <script src="scripts/vendor.js"></script>
