--- a/forums-open-category-themes-topics.html
+++ b/forums-open-category-themes-topics.html
@@ -65,6 +65,8 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
+                    <li><a href="#"><span class="message-icon"></span>Messages</a></li>
+                    <li><a href="#"><span class="edit-icon"></span>Edit Profile</a></li>
                     <li><a href="#"><span class="logout-icon"></span>LogOut</a></li>
                   </ul>
                 </li> -->
@@ -98,6 +100,8 @@
                   </a>
                 </li>
                 <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
+                <li><a href="#"><span class="message-icon"></span>Messages</a></li>
+                <li><a href="#"><span class="edit-icon"></span>Edit Profile</a></li>
                 <li><a href="#"><span class="logout-icon"></span>LogOut</a></li> -->
 
                 <!-- END FOR REGISTERED USERS -->
@@ -1204,7 +1208,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPoiPlxE-NMWr9xp9_ouItwqDm27zrdp4&signed_in=true&libraries=places&callback=initMap" async defer="defer">
+    </script>
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
     <script src="scripts/vendor.js"></script>
     
