--- a/login.html
+++ b/login.html
@@ -65,6 +65,8 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
+                    <li><a href="#"><span class="message-icon"></span>Messages</a></li>
+                    <li><a href="#"><span class="edit-icon"></span>Edit Profile</a></li>
                     <li><a href="#"><span class="logout-icon"></span>LogOut</a></li>
                   </ul>
                 </li>
@@ -87,18 +89,20 @@
                 <li class="selfcad">
                   <a href="#"><span class="logo-icon"></span>My SelfCAD</a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="login.html"><span class="login-icon"></span>Login</a>
-                </li>
+                </li> -->
                 <!-- FOR REGISTERED USERS -->
 
-                <!-- <li>
+                <li>
                   <a href="#">
                     <span class="user-photo"></span>Natalia
                   </a>
                 </li>
                 <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
-                <li><a href="#"><span class="logout-icon"></span>LogOut</a></li> -->
+                <li><a href="#"><span class="message-icon"></span>Messages</a></li>
+                <li><a href="#"><span class="edit-icon"></span>Edit Profile</a></li>
+                <li><a href="#"><span class="logout-icon"></span>LogOut</a></li>
 
                 <!-- END FOR REGISTERED USERS -->
               </ul>
@@ -279,7 +283,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPoiPlxE-NMWr9xp9_ouItwqDm27zrdp4&signed_in=true&libraries=places&callback=initMap" async defer="defer">
+    </script>
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 
     <script src="scripts/vendor.js"></script>
