--- a/faq-select-category-single.html
+++ b/faq-select-category-single.html
@@ -24,7 +24,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div id="faq">
-      <nav class="navbar navbar-default">
+      <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
