--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div id="gallery">
-      <nav class="navbar navbar-default">
+      <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -204,8 +204,6 @@
                       </div>
                     </div>
                   </div>
-                  <!-- <div class="col-md-6">
-                  </div> -->
                 </div>
               </form>
 
